# spin-dream

./: README.md  spin
.github/workflows/: ci.yml
example/: Makefile  README.md  demo.opam  dune  dune-project  tailwind.config.js
example/asset/vendors/font-files/: inter.css
example/src/: dune  main.ml
example/template/: dune  homepage.eml  layout.eml
template/: Makefile  README.md  dune  dune-project  tailwind.config.js  {{ project_slug }}.opam  {{ project_slug }}.opam.template
template/src/: dune  main.ml
template/template/: dune  homepage.eml  layout.eml  not_found.eml
